--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,11 @@ authors = ["Zak Raicik <raicik.zach@Gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+Flask = "^2.3.2"
+black = "^23.3.0"
+python-dotenv = "^1.0.0"
+openai = "^0.27.7"
+pytest = "^7.3.1"
 
 [tool.poetry.dev-dependencies]
 
