--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 Flask = "^2.3.2"
 openai = "^0.27.7"
 Flask-Cors = "^3.0.10"
+Flask-Limiter = "^3.3.1"
 
 
 [tool.poetry.dev-dependencies]
