--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ Flask = "^2.3.2"
 openai = "^0.27.7"
 Flask-Cors = "^3.0.10"
 Flask-Limiter = "^3.3.1"
+gunicorn = "^20.1.0"
 
 
 [tool.poetry.dev-dependencies]
